{{$NEXT}}

    - Allow file list to FreshenCache

0.012  2015-01-20 12:11:12 CAT

    - Require Cache::RedisDB 0.07
    - Improve FreshenCache with new 'ttl' command from Cache.

0.011  2015-01-18 16:27:42 CAT

    - Improve POD style, perhaps.
    - Require Cache::RedisDB 0.06
    - Add FreshenCache which tries to get the cache in line with disk

0.010  2015-01-07 11:31:04 EST
    - Move to Milla for distribution management